replace old files with new set

--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cherry Hill Sai Center</title>
+    <title>Services - Cherry Hill Sai Center</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,21 +21,12 @@
         </nav>
     </header>
     <main>
-        <section class="hero">
-            <h1>Welcome to the Cherry Hill Sai Center</h1>
-            <p>Embracing Love, Service, and Spiritual Growth</p>
-        </section>
-        <section class="mission">
-            <h2>Our Mission</h2>
-            <p>To foster a loving community through spiritual education and selfless service.</p>
-        </section>
-        <section class="events">
-            <h2>Upcoming Events</h2>
-            <ul>
-                <li>Philly Sandwich Seva at Logan Square at 8:30 am </li>
-                <li>Weekly Devotional Program at Sri Sathya Sai Center of Cherry Hill</li>
-            </ul>
-        </section>
+        <h1>Our Services</h1>
+        <ul>
+            <li>Donation of Non Perishable Food Items</li>
+            <li>Narayan Seva Third Saturday of the month</li>
+            <li>Philadelphia Sandwich Seva Second and Fourth Saturday of the month</li>
+        </ul>
     </main>
     <footer>
         <p>&copy; 2024 Cherry Hill Sai Center</p>
