--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cherry Hill Sai Center</title>
+    <title>About Us - Cherry Hill Sai Center</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -21,21 +21,8 @@
         </nav>
     </header>
     <main>
-        <section class="hero">
-            <h1>Welcome to the Cherry Hill Sai Center</h1>
-            <p>Embracing Love, Service, and Spiritual Growth</p>
-        </section>
-        <section class="mission">
-            <h2>Our Mission</h2>
-            <p>To foster a loving community through spiritual education and selfless service.</p>
-        </section>
-        <section class="events">
-            <h2>Upcoming Events</h2>
-            <ul>
-                <li>Philly Sandwich Seva at Logan Square at 8:30 am </li>
-                <li>Weekly Devotional Program at Sri Sathya Sai Center of Cherry Hill</li>
-            </ul>
-        </section>
+        <h1>About Us</h1>
+        <p>The Cherry Hill Sai Center is dedicated to promoting spiritual growth and community service. We follow the teachings of Sai Baba and aim to create a loving and compassionate environment.</p>
     </main>
     <footer>
         <p>&copy; 2024 Cherry Hill Sai Center</p>
