--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <section class="hero">
-            <h1>Welcome to the Cherry Hill Sai Center</h1>
+            <h1>Welcome to Sri Sathya Sai Center of Cherry Hill</h1>
             <p>Embracing Love, Service, and Spiritual Growth</p>
         </section>
         <section class="mission">
@@ -43,4 +43,3 @@
     </footer>
 </body>
 </html>
-
