--- a/index.html
+++ b/index.html
@@ -32,8 +32,14 @@
         <section class="events">
             <h2>Upcoming Events</h2>
             <ul>
-                <li>Philly Sandwich Seva at Logan Square at 8:30 am </li>
+                <li>Philly Sandwich Seva at Logan Square - October 12, 8:30 am </li>
                 <li>Weekly Devotional Program at Sri Sathya Sai Center of Cherry Hill</li>
+                    <ul>
+                          <li>2:00 - 3:15 PM	SSE Bhajan Practice and SSE Classes</li>
+                          <li>3:30 - 4:40 PM	Mahishasura Mardini Stotram Chanting,Open Bhajans, Closing Prayers and Announcements</li>
+                          <li>4:40 - 5:30 PM	Guest Speaker </li>
+                          <li>Meeting Location: Unitarian Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034 </li>
+                    </ul>  
             </ul>
         </section>
     </main>
