--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <h1>About Us</h1>
-        <p>The Cherry Hill Sai Center is dedicated to promoting spiritual growth and community service. We follow the teachings of Sai Baba and aim to create a loving and compassionate environment.</p>
+        <p>The Cherry Hill Sai Center is dedicated to promoting spiritual growth and community service. We follow the teachings of Sri Sathya Sai Baba and aim to create a loving and compassionate environment.</p>
     </main>
     <footer>
         <p>&copy; 2024 Cherry Hill Sai Center</p>
