--- a/about.html
+++ b/about.html
@@ -16,6 +16,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
+                <li><a href="devotion.html">Devotion</a></li>
+                <li><a href="sse.html">SSE</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
