--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,8 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="services.html">Services</a></li>
+                <li><a href="devotion.html">Devotion</a></li>
+                <li><a href="sse.html">SSE</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -24,7 +26,6 @@
         <h1>Contact Us</h1>
         <p>If you have any questions or would like more information, please reach out:</p>
         <p>Email:cherryhillsaicenter@gmail.org</p>
-        <p>Phone: (678)296 8057</p>
     </main>
     <footer>
         <p>&copy; 2024 Cherry Hill Sai Center</p>
