SSE Pre SSE addition

--- a/sse.html
+++ b/sse.html
@@ -42,7 +42,7 @@
             <!-- wp:group -->
             <div class="wp-block-group"><div class="wp-block-group__inner-container"><!-- wp:group -->
             <div class="wp-block-group"><div class="wp-block-group__inner-container"><!-- wp:paragraph -->
-            <p>Group 1 (1st, 2nd, 3rd Graders)<br>Group 2 (4th, 5th , 6th Graders)<br>Group 3 (7th, 8th, 9th Graders)<br>Group 4 (10th, 11th , 12th Graders)<br>Young Adults (18 to 40 yrs old)</p>
+            <p>Pre SSE (4 to 6 Yrs Old)<br>Group 1 (1st, 2nd, 3rd Graders)<br>Group 2 (4th, 5th , 6th Graders)<br>Group 3 (7th, 8th, 9th Graders)<br>Group 4 (10th, 11th , 12th Graders)<br>Young Adults (18 to 40 yrs old)</p>
             <!-- /wp:paragraph --></div></div>
             <!-- /wp:group --></div></div>
             <!-- /wp:group -->
