--- a/devotion.html
+++ b/devotion.html
@@ -23,11 +23,11 @@
         </nav>
     </header>
     <main>
-        <h1>Our Services</h1>
+        <h1>Weekly Devotional Programs</h1>
         <ul>
-            <li>Donation of Non Perishable Food Items</li>
-            <li>Narayan Seva Third Saturday of the month</li>
-            <li>Philadelphia Sandwich Seva Second and Fourth Saturday of the month</li>
+            <li>3:30 - 4:40 PM	Open Bhajans, Closing Prayers and Announcements</li>
+            <li>4:40 - 5:30 PM	Study Circle </li>
+            <li>Meeting Location: Unitarian Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034 </li>
         </ul>
     </main>
     <footer>
