--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
     <main>
         <h1>Contact Us</h1>
         <p>If you have any questions or would like more information, please reach out:</p>
-        <p>Email:cherryhillsaicenter@gmail.org</p>
+        <p>Email:<a href="mailto:cherryhillsaicenter@gmail.org">cherryhillsaicenter@gmail.org</a></p>
     </main>
     <footer>
         <p>&copy; 2024 Cherry Hill Sai Center</p>
