Some more updates to test_aruN

--- a/test_aruN.html
+++ b/test_aruN.html
@@ -40,19 +40,22 @@
     <main>
         <div class="position-relative overflow-hidden m-3 bg-body-tertiary" id="Home">
             <div class="row justify-content-center">
-                <div class="col-2 text-right">
+                <div class="col-2 text-right align-self-center">
                     <img src="images/logo.png" alt="Logo" style="max-width: 100px;" class="float-end" />
                 </div>
-                <div class="col-6 text-left">
+                <div class="col-7 text-center">
                     <h1 class="fw-bold">Sri Sathya Sai Center of Cherry Hill</h1>
                     <h4 class="fw-normal text-muted mb-3">Embracing Love, Service, and Spiritual Growth</h4>
+                </div>
+                <div class="col-2 align-self-center">
+                    <img src="images/Ssb.jpg" alt="Logo" style="max-width: 100px;" class="float-start" />
                 </div>
             </div>
         </div>
         <div class="bg-body-tertiary text-center overflow-hidden m-3">
             <div class="my-1">
                 <h2 class="display-5">Our Mission</h2>
-                <p class="lead">
+                <p class="lead fw-semibold">
                     To foster a loving community through spiritual education and selfless service.
                 </p>
             </div>
