--- a/test_aruN.html
+++ b/test_aruN.html
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cherry Hill Sai Center</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+        crossorigin="anonymous">
+    <link rel="stylesheet" 
+        href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-md sticky-top border-bottom bg-body-tertiary">
+<body id="body">
+    <nav class="navbar navbar-expand-md border-bottom bg-body-tertiary">
         <div class="container">
             <a class="navbar-brand d-md-none" href="#">
             </a>
@@ -61,8 +64,10 @@
             </div>
         </div>
         <div class="bg-body-tertiary m-3 overflow-hidden p-3">
-            <div class="">
-                <h2 class="display-5">Upcoming Events</h2>
+            <div class="row justify-content-between">
+                <div class="col">
+                    <h2 class="display-5">Upcoming Events</h2>
+                </div>
             </div>
             <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
                 <ul>
@@ -85,16 +90,26 @@
             </div>
         </div>
         <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="AboutUs">
-            <div class="">
-                <h2 class="display-5">About us</h2>
+            <div class="row justify-content-between">
+                <div class="col-11">
+                    <h2 class="display-5">About us</h2>
+                </div>
+                <div class="col-1 align-self-center">
+                    <a class="btn btn-secondary" href="#body"><i class="bi bi-house"></i></a>
+                </div>
             </div>
             <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
                 The Cherry Hill Sai Center is dedicated to promoting spiritual growth and community service. We follow the teachings of Sri Sathya Sai Baba and aim to create a loving and compassionate environment.
             </div>
         </div>
         <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="Service">
-            <div class="">
-                <h2 class="display-5">Our Services</h2>
+            <div class="row justify-content-between">
+                <div class="col-11">
+                    <h2 class="display-5">Our Services</h2>
+                </div>
+                <div class="col-1 align-self-center">
+                    <a class="btn btn-secondary" href="#body"><i class="bi bi-house"></i></a>
+                </div>
             </div>
             <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
                 <ul>
@@ -105,8 +120,13 @@
             </div>
         </div>
         <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="Devotion">
-            <div class="">
-                <h2 class="display-5">Weekly Devotional Programs</h2>
+            <div class="row justify-content-between">
+                <div class="col-11">
+                    <h2 class="display-5">Weekly Devotional Programs</h2>
+                </div>
+                <div class="col-1 align-self-center">
+                    <a class="btn btn-secondary" href="#body"><i class="bi bi-house"></i></a>
+                </div>
             </div>
             <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
                 <ul>
@@ -121,8 +141,15 @@
             </div>
         </div>
         <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="Sse">
+            <div class="row justify-content-between">
+                <div class="col-11">
+                    <h2 class="display-5">SSE</h2>
+                </div>
+                <div class="col-1 align-self-center">
+                    <a class="btn btn-secondary" href="#body"><i class="bi bi-house"></i></a>
+                </div>
+            </div>
             <div class="">
-                <h2 class="display-5">SSE</h2>
                 <p class="lead">
                     "The end of education is character. Education without character is useless." -- Sathya Sai Baba,
                     Prashanthi Nilayam, November 20, 2001.
@@ -171,8 +198,13 @@
             </div>
         </div>
         <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="Contact">
-            <div class="">
-                <h2 class="display-5">Contact us</h2>
+            <div class="row justify-content-between">
+                <div class="col-11">
+                    <h2 class="display-5">Contact us</h2>
+                </div>
+                <div class="col-1 align-self-center">
+                    <a class="btn btn-secondary" href="#body"><i class="bi bi-house"></i></a>
+                </div>
             </div>
             <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
                 <p>If you have any questions or would like more information, please send Email to</p>
