--- a/index.html
+++ b/index.html
@@ -1,53 +1,228 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="en" data-bs-theme="auto">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cherry Hill Sai Center</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" 
+        crossorigin="anonymous">
+    <link rel="stylesheet" 
+        href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
-<body>
-    <header>
-        <div class="logo">
-            <img src="images/logo.png" alt="Cherry Hill Sai Center Logo">
+
+<body id="body">
+    <nav class="navbar navbar-expand-md border-bottom bg-body-tertiary">
+        <div class="container">
+            <a class="navbar-brand d-md-none" href="#">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvas"
+                aria-controls="offcanvas" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvas" aria-labelledby="offcanvasLabel">
+                <div class="offcanvas-header">
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close">
+                    </button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav flex-grow-1 justify-content-between">
+                        <li class="nav-item"><a class="nav-link" href="#Home">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#AboutUs">About Us</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#Service">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#Devotion">Devotion</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#Sse">SSE</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#Contact">Contact</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="devotion.html">Devotion</a></li>
-                <li><a href="sse.html">SSE</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+    </nav>
+
     <main>
-        <section class="hero">
-            <h1>Welcome to Sri Sathya Sai Center of Cherry Hill</h1>
-            <p>Embracing Love, Service, and Spiritual Growth</p>
-        </section>
-        <section class="mission">
-            <h2>Our Mission</h2>
-            <p>To foster a loving community through spiritual education and selfless service.</p>
-        </section>
-        <section class="events">
-            <h2>Upcoming Events</h2>
-            <ul>
-                <li>Philly Sandwich Seva at Logan Square - October 12, 8:30 am </li>
-                <li>Weekly Devotional Program at Sri Sathya Sai Center of Cherry Hill</li>
+        <div class="position-relative overflow-hidden m-3 bg-body-tertiary" id="Home">
+            <div class="row justify-content-center">
+                <div class="col-2 text-right align-self-center">
+                    <img src="images/logo.png" alt="Logo" style="max-width: 100px;" class="float-end" />
+                </div>
+                <div class="col-7 text-center">
+                    <h1 class="fw-bold">Sri Sathya Sai Center of Cherry Hill</h1>
+                    <h4 class="fw-normal text-muted mb-3">Embracing Love, Service, and Spiritual Growth</h4>
+                </div>
+                <div class="col-2 align-self-center">
+                    <img src="images/Ssb.jpg" alt="Logo" style="max-width: 100px;" class="float-start" />
+                </div>
+            </div>
+        </div>
+        <div class="bg-body-tertiary text-center overflow-hidden m-3">
+            <div class="my-1">
+                <h2 class="display-5">Our Mission</h2>
+                <p class="lead fw-semibold">
+                    To foster a loving community through spiritual education and selfless service.
+                </p>
+            </div>
+        </div>
+        <div class="bg-body-tertiary m-3 overflow-hidden p-3">
+            <div class="row justify-content-between">
+                <div class="col">
+                    <h2 class="display-5">Upcoming Events</h2>
+                </div>
+            </div>
+            <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
+                <ul>
+                    <li>Philly Sandwich Seva at Logan Square - October 12, 8:30 am</li>
+                    <li>Weekly Devotional Program at Sri Sathya Sai Center of Cherry Hill</li>
                     <ul>
-                          <li>2:00 - 3:15 PM	SSE Bhajan Practice and SSE Classes</li>
-                          <li>3:30 - 4:40 PM	Mahishasura Mardini Stotram Chanting,Open Bhajans, Closing Prayers and Announcements</li>
-                          <li>4:40 - 5:30 PM	Guest Speaker </li>
-                          <li>Meeting Location: Unitarian Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034 </li>
-                    </ul>  
-            </ul>
-        </section>
+                        <li>2:00 - 3:15 PM SSE Bhajan Practice and SSE Classes</li>
+                        <li>
+                            3:30 - 4:40 PM Mahishasura Mardini Stotram Chanting,Open Bhajans, Closing Prayers and
+                            Announcements
+                        </li>
+                        <li>4:40 - 5:30 PM Guest Speaker</li>
+                        <li>
+                            Meeting Location: <a target="_blank"
+                                href="http://maps.google.com/?q=Unitarian Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034">Unitarian
+                                Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034</a>
+                        </li>
+                    </ul>
+                </ul>
+            </div>
+        </div>
+        <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="AboutUs">
+            <div class="row justify-content-between">
+                <div class="col-11">
+                    <h2 class="display-5">About us</h2>
+                </div>
+                <div class="col-1 align-self-center">
+                    <a class="btn btn-secondary" href="#body"><i class="bi bi-house"></i></a>
+                </div>
+            </div>
+            <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
+                The Cherry Hill Sai Center is dedicated to promoting spiritual growth and community service. We follow the teachings of Sri Sathya Sai Baba and aim to create a loving and compassionate environment.
+            </div>
+        </div>
+        <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="Service">
+            <div class="row justify-content-between">
+                <div class="col-11">
+                    <h2 class="display-5">Our Services</h2>
+                </div>
+                <div class="col-1 align-self-center">
+                    <a class="btn btn-secondary" href="#body"><i class="bi bi-house"></i></a>
+                </div>
+            </div>
+            <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
+                <ul>
+                    <li>Donation of Non Perishable Food Items</li>
+                    <li>Narayan Seva Third Saturday of the month</li>
+                    <li>Philadelphia Sandwich Seva Second and Fourth Saturday of the month</li>
+                </ul>
+            </div>
+        </div>
+        <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="Devotion">
+            <div class="row justify-content-between">
+                <div class="col-11">
+                    <h2 class="display-5">Weekly Devotional Programs</h2>
+                </div>
+                <div class="col-1 align-self-center">
+                    <a class="btn btn-secondary" href="#body"><i class="bi bi-house"></i></a>
+                </div>
+            </div>
+            <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
+                <ul>
+                    <li>3:30 - 4:40 PM Open Bhajans, Closing Prayers and Announcements</li>
+                    <li>4:40 - 5:30 PM Study Circle</li>
+                    <li>
+                        Meeting Location: <a target="_blank"
+                            href="http://maps.google.com/?q=Unitarian Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034">Unitarian
+                            Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="Sse">
+            <div class="row justify-content-between">
+                <div class="col-11">
+                    <h2 class="display-5">SSE</h2>
+                </div>
+                <div class="col-1 align-self-center">
+                    <a class="btn btn-secondary" href="#body"><i class="bi bi-house"></i></a>
+                </div>
+            </div>
+            <div class="">
+                <p class="lead">
+                    "The end of education is character. Education without character is useless." -- Sathya Sai Baba,
+                    Prashanthi Nilayam, November 20, 2001.
+                </p>
+                <p class="lead">
+                    "Bal Vikas (Sai Spiritual Education) is the primary basis of the great movement to restore
+                    righteousness (dharma) in the world. The ideal of the program is to raise a generation of boys and
+                    girls who have a clean and a clear conscience."
+                </p>
+            </div>
+            <div class="carousel slide mb-3" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/SSEBanner-e1593975500206.png" class="d-block w-100" alt="Image1"
+                            style="max-height: 400px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/with-small-children.jpg" class="d-block w-100" alt="Image2"
+                            style="max-height: 400px;">
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                        data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+            <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
+                <p class="fw-semibold">Cherry Hill SSE Timings and Details:</p>
+                <p>(Sai Spiritual Education) meets every Sunday from 2:00 - 3:15 pm!</p>
+                <ul>
+                    <li>Pre SSE (4 to 6 Yrs Old)</li>
+                    <li>Group 1 (1st, 2nd, 3rd Graders)</li>
+                    <li>Group 2 (4th, 5th , 6th Graders)</li>
+                    <li>Group 3 (7th, 8th, 9th Graders)</li>
+                    <li>Group 4 (10th, 11th , 12th Graders)</li>
+                    <li>Young Adults (18 to 40 yrs old)</li>
+                </ul>
+                All our teachers are certified in teaching SSE. If you need more information please contact
+                <a href="mailto:cherryhillsaicenter@gmail.com">cherryhillsaicenter@gmail.com</a>
+            </div>
+        </div>
+        <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="Contact">
+            <div class="row justify-content-between">
+                <div class="col-11">
+                    <h2 class="display-5">Contact us</h2>
+                </div>
+                <div class="col-1 align-self-center">
+                    <a class="btn btn-secondary" href="#body"><i class="bi bi-house"></i></a>
+                </div>
+            </div>
+            <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
+                <p>If you have any questions or would like more information, please send Email to</p>
+                <p>Email: <a href="mailto:cherryhillsaicenter@gmail.com">cherryhillsaicenter@gmail.com</a></p>
+            </div>
+        </div>
     </main>
-    <footer>
-        <p>&copy; 2024 Cherry Hill Sai Center</p>
-        <p>Visit us: <a href="https://www.cherryhillsaicenter.org">www.cherryhillsaicenter.org</a></p>
+
+    <footer class="container py-3">
+        <div class="row text-center">
+            <div class="col-12">
+                &copy; 2024 Cherry Hill Sai Center
+            </div>
+        </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
