--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
                 <ul>
                     <li>Philly Narayan Seva Soup Kitchen at Mt. Holly Shelter - October 19</li>
-                    <li>Weekly Devotional Program at Sri Sathya Sai Center of Cherry Hill</li>
+                    <li>Devotional Program at Sri Sathya Sai Center of Cherry Hill - October 20</li>
                     <ul>
                         <li>2:00 - 3:15 PM SSE Bhajan Practice and SSE Classes</li>
                         <li>
