--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                     girls who have a clean and a clear conscience."
                 </p>
             </div>
-            <div class="carousel slide mb-3" data-bs-ride="carousel">
+            <div id="carouselExampleAutoplaying" class="carousel slide mb-3" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img src="images/SSEBanner-e1593975500206.png" class="d-block w-100" alt="Image1"
