--- a/index - Copy.html
+++ b/index - Copy.html
@@ -70,14 +70,22 @@
                 </div>
             </div>
             <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
-                <iframe src="https://calendar.google.com/calendar/embed?src=cherryhillsaicenter%40gmail.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+                <ul>
+                    <li>Philly Narayan Seva Soup Kitchen at Mt. Holly Shelter - October 19</li>
+                    <li>Devotional Program at Sri Sathya Sai Center of Cherry Hill - October 20</li>
                     <ul>
+                        <li>2:00 - 3:15 PM SSE Bhajan Practice and SSE Classes</li>
+                        <li>
+                            3:30 - 4:40 PM Avatar Hood Celebrations , Open Bhajans, Closing Prayers and Announcements
+                        </li>
+                        <li>4:40 - 5:30 PM Panel Discussion</li>
                         <li>
                             Meeting Location: <a target="_blank"
                                 href="http://maps.google.com/?q=Unitarian Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034">Unitarian
                                 Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034</a>
                         </li>
                     </ul>
+                </ul>
             </div>
         </div>
         <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="AboutUs">
