--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
                 </div>
             </div>
             <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
-                https://calendar.google.com/calendar/embed?src=cherryhillsaicenter%40gmail.com&ctz=America%2FNew_York
-                    <ul>
+                <iframe src="https://calendar.google.com/calendar/embed?src=cherryhillsaicenter%40gmail.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>                    <ul>
                         <li>
                             Meeting Location: <a target="_blank"
                                 href="http://maps.google.com/?q=Unitarian Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034">Unitarian
