--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
             </div>
             <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
-                https://calendar.google.com/calendar/embed?src=cherryhillsaicenter%40gmail.com&ctz=America%2FNew_York
+                <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&bgcolor=%23f8dada&mode=AGENDA&showPrint=0&showTabs=0&src=Y2hlcnJ5aGlsbHNhaWNlbnRlckBnbWFpbC5jb20&color=%23c61600" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
                     <ul>
                         <li>
                             Meeting Location: <a target="_blank"
