Location and Announcements by RR

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                 <div class="col-7 text-center">
                     <h1 class="fw-bold">Sri Sathya Sai Center of Cherry Hill</h1>
                     <h4 class="fw-normal text-muted mb-3">Embracing Love, Service, and Spiritual Growth</h4>
+                    <h7 class="fw-normal text-muted mb-3">Center Meeting Location: <a target="_blank"
+                        href="http://maps.google.com/?q=Unitarian Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034">Unitarian
+                        Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034</a></h7>
                 </div>
                 <div class="col-2 align-self-center">
                     <img src="images/Ssb.jpg" alt="Logo" style="max-width: 100px;" class="float-start" />
@@ -120,15 +123,15 @@
                     </div>
                     <div class="carousel-item">
                         <img src="images/latestservice3.jpeg" class="d-block w-100" alt="Image2"
-                            style="max-height: 400px;">
+                            style="max-height: 600px;">
                     </div>   
                     <div class="carousel-item">
                         <img src="images/latestservice4.jpeg" class="d-block w-100" alt="Image2"
-                            style="max-height: 400px;">
+                            style="max-height: 600px;">
                     </div>
                     <div class="carousel-item">
                         <img src="images/latestservice5.jpeg" class="d-block w-100" alt="Image2"
-                            style="max-height: 400px;">
+                            style="max-height: 600px;">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -146,7 +149,7 @@
         <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="Devotion">
             <div class="row justify-content-between">
                 <div class="col-11">
-                    <h2 class="display-5">Weekly Devotional Programs</h2>
+                    <h2 class="display-5">Typical Weekly Devotional Programs</h2>
                 </div>
                 <div class="col-1 align-self-center">
                     <a class="btn btn-secondary" href="#body"><i class="bi bi-house"></i></a>
@@ -156,12 +159,10 @@
                 <ul>
                     <li>3:30 - 4:40 PM Open Bhajans, Closing Prayers and Announcements</li>
                     <li>4:40 - 5:30 PM Study Circle</li>
-                    <li>
-                        Meeting Location: <a target="_blank"
-                            href="http://maps.google.com/?q=Unitarian Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034">Unitarian
-                            Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034</a>
-                    </li>
                 </ul>
+                <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
+                    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRp1_V4zYxeYmme_oqz_sB2wQ2z8V9QQjbx1DW38onMNefSNgLlcRkNRs3Ck_3_YQ/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                </div>
             </div>
         </div>
         <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="Sse">
