--- a/index.html
+++ b/index.html
@@ -74,12 +74,6 @@
             </div>
             <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
                 <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&ctz=America%2FNew_York&bgcolor=%23ffffff&mode=AGENDA&src=Y2hlcnJ5aGlsbHNhaWNlbnRlckBnbWFpbC5jb20&color=%23c61600" style="border:solid 1px #777" width="800" height="600" frameborder="0" scrolling="no"></iframe>
-                <li>
-                            Center Meeting Location: <a target="_blank"
-                                href="http://maps.google.com/?q=Unitarian Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034">Unitarian
-                                Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034</a>
-                        </li>
-                    </ul>
             </div>
         </div>
         <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="AboutUs">
@@ -149,7 +143,7 @@
         <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="Devotion">
             <div class="row justify-content-between">
                 <div class="col-11">
-                    <h2 class="display-5">Typical Weekly Devotional Programs</h2>
+                    <h2 class="display-5">Typical Weekly Devotional Program</h2>
                 </div>
                 <div class="col-1 align-self-center">
                     <a class="btn btn-secondary" href="#body"><i class="bi bi-house"></i></a>
@@ -159,10 +153,21 @@
                 <ul>
                     <li>3:30 - 4:40 PM Open Bhajans, Closing Prayers and Announcements</li>
                     <li>4:40 - 5:30 PM Study Circle</li>
-                </ul>
-                <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
-                    <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRp1_V4zYxeYmme_oqz_sB2wQ2z8V9QQjbx1DW38onMNefSNgLlcRkNRs3Ck_3_YQ/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+                </ul> 
+            </div>
+            <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
+                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRp1_V4zYxeYmme_oqz_sB2wQ2z8V9QQjbx1DW38onMNefSNgLlcRkNRs3Ck_3_YQ/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+            </div>
+            <div class="row justify-content-between">
+                <div class="col-11">
+                    <h4 class="display-5">Announcements</h4>
                 </div>
+                <div class="col-1 align-self-center">
+                    <a class="btn btn-secondary" href="#body"><i class="bi bi-house"></i></a>
+                </div>
+            </div>
+            <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
+                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRp1_V4zYxeYmme_oqz_sB2wQ2z8V9QQjbx1DW38onMNefSNgLlcRkNRs3Ck_3_YQ/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
             </div>
         </div>
         <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="Sse">
