--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
                     <li>Philadelphia Sandwich Seva Second and Fourth Saturday of the month</li>
                 </ul>
             </div>
+            <div class="row justify-content-between">
+                <div class="col-11">
+                    <h4 class="display-5">Recent Service Activities Pictures</h4>
+                </div>
+                <div class="col-1 align-self-center">
+                    <a class="btn btn-secondary" href="#body"><i class="bi bi-house"></i></a>
+                </div>
+            </div>
             <div id="carouselExampleAutoplaying" class="carousel slide mb-3" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -125,6 +133,26 @@
                     </div>
                     <div class="carousel-item">
                         <img src="images/latestservice5.jpeg" class="d-block w-100" alt="Image2"
+                            style="max-height: 600px;">
+                    </div>
+                    <div class="carousel-item active">
+                        <img src="images/latestservice6.jpeg" class="d-block w-100" alt="Image1"
+                            style="max-height: 600px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/latestservice7.jpeg" class="d-block w-100" alt="Image2"
+                            style="max-height: 600px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/latestservice8.jpeg" class="d-block w-100" alt="Image2"
+                            style="max-height: 600px;">
+                    </div>   
+                    <div class="carousel-item">
+                        <img src="images/latestservice9.jpeg" class="d-block w-100" alt="Image2"
+                            style="max-height: 600px;">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="images/latestservice10.jpeg" class="d-block w-100" alt="Image2"
                             style="max-height: 600px;">
                     </div>
                 </div>
@@ -155,9 +183,7 @@
                     <li>4:40 - 5:30 PM Study Circle</li>
                 </ul> 
             </div>
-            <div class="bg-body shadow-sm p-3" style="border-radius: 17px;">
-                <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRp1_V4zYxeYmme_oqz_sB2wQ2z8V9QQjbx1DW38onMNefSNgLlcRkNRs3Ck_3_YQ/embed?start=false&loop=false&delayms=3000" frameborder="0" width="1280" height="749" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-            </div>
+            
             <div class="row justify-content-between">
                 <div class="col-11">
                     <h4 class="display-5">Announcements</h4>
