--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                         <li class="nav-item"><a class="nav-link" href="#Service">Services</a></li>
                         <li class="nav-item"><a class="nav-link" href="#Devotion">Devotion</a></li>
                         <li class="nav-item"><a class="nav-link" href="#Sse">SSE</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#YAs">YAs</a></li>
                         <li class="nav-item"><a class="nav-link" href="#Contact">Contact</a></li>
                     </ul>
                 </div>
@@ -135,7 +136,7 @@
                         <img src="images/latestservice5.jpeg" class="d-block w-100" alt="Image2"
                             style="max-height: 600px;">
                     </div>
-                    <div class="carousel-item active">
+                    <div class="carousel-item">
                         <img src="images/latestservice6.jpeg" class="d-block w-100" alt="Image2"
                             style="max-height: 600px;">
                     </div>
