--- a/index.html
+++ b/index.html
@@ -254,6 +254,29 @@
                 <a href="mailto:cherryhillsaicenter@gmail.com">cherryhillsaicenter@gmail.com</a>
             </div>
         </div>
+        <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="YAs">
+            <div class="row justify-content-between">
+                <div class="col-11">
+                    <h2 class="display-5">Sri Sathya Sai International Young Adults Program</h2>
+                </div>
+                <div class="col-1 align-self-center">
+                    <a class="btn btn-secondary" href="#body"><i class="bi bi-house"></i></a>
+                </div>
+                <div class="">
+                    <p class="lead">
+                        In Sri Sathya Sai Baba’s discourse during the World Youth Conference in 1997, He revealed the important role of Young Adults in fulfilling a noble mission:
+                    </p>
+                    <p class="lead">
+                        Young men and women, the world’s good fate, world’s progress is dependent on the transformation of the youth, today. Only when the youth transform themselves with good character, will the world be able to experience ideal virtues.- Sri Sathya Sai Baba, World Youth Conference, 1997
+                    </p>
+                    <p class="lead">
+                        The Sri Sathya Sai Young Adults Programme (SSSYAP) seeks to deliver this powerful message to the world through Young Adults worldwide. The Programme encourages men and women, between the ages of 18 and 40, to lead purposeful lives in service of their families, communities, and countries by learning and practicing the spiritual principles revealed by the life, teachings, and work of Sri Sathya Sai Baba. Primary importance is given to holistic character development through both personal transformation and selfless service.
+    
+                        The International Young Adults Committee (IYAC) was established under the auspices of the Prasanthi Council and works with its guidance. The IYAC comprises of the International Young Adults Coordinator, Deputy International Young Adults Coordinators, Subcommittee Leads, and the Zone and Deputy Zone Young Adults Coordinators. Together, they coordinate and lead the SSSYAP around the world.
+                    </p>
+                </div>
+            </div>
+        </div>
         <div class="bg-body-tertiary m-3 overflow-hidden p-3" id="Contact">
             <div class="row justify-content-between">
                 <div class="col-11">
