--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="col-7 text-center">
                     <h1 class="fw-bold">Sri Sathya Sai Center of Cherry Hill</h1>
                     <h4 class="fw-normal text-muted mb-3">Embracing Love, Service, and Spiritual Growth</h4>
-                    <h7 class="fw-normal text-muted mb-3">Center Meeting Location: <a target="_blank"
+                    <h7 class="fw-normal text-muted mb-3"> <a target="_blank"
                         href="http://maps.google.com/?q=Unitarian Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034">Unitarian
                         Universalist Church 401 Kings Hwy N, Cherry Hill, NJ 08034</a></h7>
                 </div>
